--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
     <title>{{user["nickname"]}}的个人主页</title>
 </head>
 <body>
-    <img alt="头像" src="{{user['headimgurl']}}">
+    <img alt="头像" src="{{user['headimgurl']}}" style="height: 200px;width: 200px">
     <table>
         <tr>
             <th>openid</th>
